--- a/scss/mix.scss
+++ b/scss/mix.scss
@@ -1,8 +1,8 @@
 @mixin fonts ($weights, $sizes, $lineHeights, $colors) {
     font-style: normal;
-    font-weight: $weights;
-    font-size: $sizes;
-    line-height: $lineHeights;
+    font-weight: rem( $weights);
+    font-size: rem($sizes);
+    line-height: rem($lineHeights);
     color: $colors;
     @content;
 }
@@ -15,8 +15,8 @@
 }
 
 @mixin button ($width, $height) {
-    width: $width;
-    height: $height;
+    width: rem($width);
+    height: rem($height);
     background-color: $yellow;
     border: none;
     display: flex;
@@ -29,8 +29,8 @@
 }
 
 @mixin underline($width, $height) {
-    width: $width;
-    height: $height;
+    width: rem($width);
+    height: rem($height);
     background-color: $yellow;
     position: absolute;
     @content;
@@ -56,8 +56,20 @@
     }
 }
 
+@mixin tablet-mini() {
+    @media(max-width: $ms) {
+        @content;
+    }
+}
+
 @mixin mobile() {
     @media(max-width: $sm) {
+        @content;
+    }
+}
+
+@mixin mobile-mini() {
+    @media(max-width: $ssm) {
         @content;
     }
 }
