--- a/css/index.css
+++ b/css/index.css
@@ -370,10 +370,6 @@
   background: none;
 }
 
-.fixed {
-  position: fixed;
-}
-
 @media (max-width: 75rem) {
   html {
     font-size: 13px;
@@ -522,6 +518,15 @@
     margin-right: 1.5625rem;
   }
   .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 0;
   }
   .navigation-items {
